[gd_scene load_steps=3 format=3 uid="uid://c35bwb1gim3p8"]

[ext_resource type="Script" uid="uid://2ljp0s7h8ywf" path="res://scenes/UI/pause_screen.gd" id="1_8mgbq"]
[ext_resource type="Theme" uid="uid://xdse31n3ef74" path="res://StellaraTheme.tres" id="2_ve1ah"]

[node name="Pause_screen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_8mgbq")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 200

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_ve1ah")
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 100
text = "Pause"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ResumeButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
theme = ExtResource("2_ve1ah")
theme_override_font_sizes/font_size = 30
text = "RESUME"

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
theme = ExtResource("2_ve1ah")
theme_override_font_sizes/font_size = 30
text = "options"

[node name="RestartButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
theme = ExtResource("2_ve1ah")
theme_override_font_sizes/font_size = 30
text = "RESTART"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
theme = ExtResource("2_ve1ah")
theme_override_font_sizes/font_size = 30
text = "QUIT"
